--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
     </activity>
     <activity android:name=".controller.PreferenceActivity">
     </activity>
+    <activity android:name=".controller.Main2Activity">
+    </activity>
   </application>
 
 </manifest>
